--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -286,6 +286,16 @@ Next discussion:
 - Can verifier detect these features?
   - if not, can users be trusted to supply features?
 
+** Slide: Can verifier detect XDP features?                           :export:
+
+Either need to /supply features/ (more input than =ifindex=)
+- *Or* verifier needs to be able to /detect features/
+
+Verifier *detection strategy*, to deduce XDP features in-use
+- If XDP return code comes from register/map
+  - then assume all XDP-return codes in use
+- Except: can remove XDP_REDIRECT if redirect-helper isn't used
+
 
 * Slide: Random slides below                                         :export:
 :PROPERTIES:
