--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -174,6 +174,13 @@ Unsolved issues:
   - Switching: Cloning
   - Ready-to-run XDP programs
 
+BPF ELF-loaders
+- reduce fragmentation, limit number of BPF-ELF-loaders
+- libbpf: promote as distro (want others to follow)
+- libbpf vs. iproute2
+  - problematic iproute2 have incompatible ELF-maps format
+
+
 * Slides below                                                     :noexport:
 
 Only sections with tag ":export:" will end-up in the presentation. The prefix
