--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -213,6 +213,15 @@ Need more flexible BPF "capabilities" levels
   - Currently forced to keep unprivileged BPF enabled
 - Levels still motivate security guys to find holes
 
+*** Notes to Slide: Current BPF "privileged" level unusable      :noexport:
+
+We are very interested in Andy Lutomirski upstream proposal and appreciate his
+effort. See his proposal: https://t.co/WIhsdN2PoJ
+
+We also find Daniel Borkmanns [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][idea for several CAP_BPF type sub-policies]]
+interesting.
+
+
 * Slide: Topic: Missing XDP feature detection                       :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
