LPC2019: Slide: Prior art #1: Katran xdp_root, rename xdp2
Rename "xdp2" -> "xdp_prog_idx0" to give readers more hints
that this program is inserted in root_array index 0.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -413,7 +413,7 @@ int xdp_root(struct xdp_md *ctx) { // installed on interface
   }
   return XDP_PASS;
 }
-int xdp2(struct xdp_md *ctx) { // in root_array with idx=0
+int xdp_prog_idx0(struct xdp_md *ctx) { // in root_array with idx=0
   for (__u32 i = 1; i < ROOT_ARRAY_SIZE; i++) { // start at 1!
     bpf_tail_call(ctx, &root_array, i);
   }
