--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -429,17 +429,17 @@ int xdp_prog_idx0(struct xdp_md *ctx) { // in root_array with idx=0
 ** Prior art #2: Cloudflare xdpdump
 
 Cloudflare has a [[https://github.com/cloudflare/xdpcap][xdpcap utility]] that can run after other XDP programs:
+- Instrument your XDP return with tail-call per XDP action
 
 #+begin_src c
 struct bpf_map_def xdpcap_hook =  {
 	.type = BPF_MAP_TYPE_PROG_ARRAY,
-	.key_size = sizeof(int),
-	.value_size = sizeof(int),
-	.max_entries = 5 }
+	.key_size = sizeof(int), .value_size = sizeof(int),
+	.max_entries = 5 };
 
 int xdpcap_exit(struct xdp_md *ctx, void *hook_map, enum xdp_action action) {
     bpf_tail_call(ctx, hook_map, action);  // doesn't return if it succeeds
-    return action;
+    return action; // reached only if above tail-call failed (no prog installed)
 }
 
 int xdp_main(struct xdp_md *ctx) {  // program installed on interface
