--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -221,6 +221,10 @@ effort. See his proposal: https://t.co/WIhsdN2PoJ
 We also find Daniel Borkmanns [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][idea for several CAP_BPF type sub-policies]]
 interesting.
 
+Alexei now also have a [[ https://lore.kernel.org/netdev/20190827205213.456318-1-ast@kernel.org/T/#u][code proposal]]
+- Introducing CAP_BPF and combining with CAP_NET_ADMIN
+- Discussions on also adding CAP_TRACING
+
 ** Slide: BPF audit logging                                         :export:
 
 */INCOMPLETE SLIDE - PLEASE FIX/*
