LPC2019: Update Slide: Outline: On distro view
Bring forward why curr missing XDP feature check is hurting XDP.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -203,6 +203,8 @@ As distro; was hoping for /more mature BPF solutions/ (chicken & egg problem?)
 - Different hooks and nice flexibility, fragments FOSS solutions
 
 BPFtool does BPF /feature probing/, but *XDP doesn't fit this model*
+- Current situation without XDP feature check:
+  - Kernel allow users to *attach invalid XDP prog*, giving */silent drops/*
 - Deep dive later: Proposing a solution for XDP features
 
 ** Slide: Outline: XDP specific issues
