--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -189,61 +189,62 @@ emacs).
 
 * Slide: Outline: On distro view                                     :export:
 
-The BPF technology *challenge* our normal /perspective/: kernel vs user-space
+eBPF *challenges* our normal /perspective/: kernel vs user-space
 
 Capabilities not good enough (*distro root-only*, open daemon attack surface)
 
 As distro; was hoping for /more mature BPF solutions/ (chicken & egg problem?)
-- Lacks community convey on common libs, build and devel environment
-- Different hooks and nice flexibility, fragments FOSS solutions
+- Lacks community consensus on common libs, build and devel environment
+- Otherwise, too much flexibility risks fragmenting FOSS solutions
 
-BPFtool does BPF /feature probing/, but *XDP doesn't fit this model*
+BPFtool does BPF /feature probing/, but *this doesn't work with XDP*
 - Current situation without XDP feature check:
-  - Kernel allow users to *attach invalid XDP prog*, giving */silent drops/*
+  - Kernel allows users to *attach invalid XDP progs*, giving */silent drops/*
 - Deep dive later: Proposing a solution for XDP features
 
 ** Slide: Outline: XDP specific issues
 
 *Hard to troubleshoot* XDP without tcpdump-like facility
-- Today, Sysadm/FOSS-user need modify BPF prog to debug (unreasonable)
+- Today, Sysadm/FOSS-user needs to modify BPF prog to debug (unreasonable)
 
 XDP currently only supports *one program per interface*
 - As distro; need to support multiple FOSS projects
 - *Need* to: Establish /common way to "share" XDP hook/
 
 /Deep dive/: Multiple programs on one interface
-- *Might* also allow (sysadm) to /load troubleshoot tcpdump-like program/
+- Will also allow user to /load troubleshoot tcpdump-like program/
 
-* Slide: BPF technology challenge us!                                :export:
+* Slide: BPF technology challenges us!                               :export:
 
-BPF *challenge* normal /separation between kernel and user-space/
+BPF *challenges* normal /separation between kernel and user-space/
 - Running user-space supplied byte-code in kernel-space
 - Fully programmable, super flexible, but also scary
 
-BPF runtime is a /sandbox technology/ - which why we allow this
+BPF runtime is a /sandbox technology/ - which is why we allow this
 - Puts a lot of *trust in the BPF verifier*
 
-Is this kind of a /micro-kernel facility/?
+Is this a kind of /micro-kernel facility/?
 - Can it offer solutions in areas, where:
   - kernel feature development is too slow
-  - kernel role-out + reboot takes too long in production
+  - kernel roll-out + reboot takes too long in production
 
 * Slide: Common BPF library: libbpf                                  :export:
 
-As distro; want communities convey on common libs
+As distro; want community consensus on common libs
 - Reduce fragmentation, e.g. limit number of BPF-ELF-loaders
 - *libbpf*: /promote as distro/ (want others to follow)
 - libbpf vs. iproute2
-  - problematic iproute2 have *incompatible ELF-maps format*
+  - problematic iproute2 has *incompatible ELF-maps format*
+  - we are working on that
 
 ** Slide: Easier build and devel environment                        :export:
 
-As distro; Want FOSS project to share build and devel environments
+We want FOSS projects to share build and devel environments
 
 Kernel [[https://github.com/torvalds/linux/tree/master/tools/testing/selftests/bpf/prog_tests][selftests/bpf]] and [[https://github.com/torvalds/linux/tree/master/samples/bpf][samples/bpf]]
-- *Bad starting point* when FOSS project want to use BPF/XDP
+- *Bad starting point* when a new project wants to use BPF/XDP
 
-With XDP focus, we have created GitHub [[https://github.com/xdp-project/][XDP-project]]
+With XDP focus, we have created a GitHub [[https://github.com/xdp-project/][XDP-project]]
 - Subproject [[https://github.com/xdp-project/xdp-tutorial][XDP-tutorial]] with /easy build and devel environment/
   - Build and test directly on your laptop via veth and network-namespaces
   - Recently added tracing examples too
@@ -257,15 +258,15 @@ With XDP focus, we have created GitHub [[https://github.com/xdp-project/][XDP-pr
 
 Current BPF only one "privileged" level, root (=CAP_SYS_ADMIN=)
 
-RHEL as distro choose, BPF is "root-only" system-wide
+RHEL: limit BPF to root only system-wide
 - Our only option: Fully unpriv user = too high risk
 - Actually /not what we really want/ - bad for overall system safety
 - E.g. daemons *unnecessary run as root after loading BPF-prog*
   - expose (daemon) can crash/compromise entire system
-  - common UNIX practise drop priv, cannot as still need to read maps
+  - common UNIX practise to drop priv, cannot as still need to read maps
 
 Need more flexible BPF "capabilities" levels
-- [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][Use-case]]: Android [[https://source.android.com/devices/tech/datausage/ebpf-traffic-monitor][ebpf-traffic-monitor]] read MAP stats (in unpriv process)
+- [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][Use-case]]: Android [[https://source.android.com/devices/tech/datausage/ebpf-traffic-monitor][ebpf-traffic-monitor]] reads MAP stats (in unpriv process)
   - Currently forced to keep unprivileged BPF enabled
 - Levels still motivate security guys to find holes
 
@@ -300,26 +301,26 @@ Simply logging BPF prog + attach, seemed natural
 This is a compressed version of Jesper's slides
 #+END_NOTES
 
-XDP per *driver dependency* breaks BPF-feature "system"
+XDP features  *dependent on driver support*, which breaks BPF feature "system"
 - BPF-core is always compiled-in
-- BPF verifier will /reject/ BPF_prog
-  - if using a *feature that isn't available in BPF-core*
+- BPF verifier will /reject/ BPF prog
+  - if using a *feature that isn't available in BPF core*
 
-XDP challenge concept
+XDP challenges this concept
 
 ** Slide: The XDP available features issue                          :export:
 
-Today: Users cannot know if a device driver support XDP or not
+Today: Users cannot know if a device driver supports XDP or not
 - This is the most often asked question
-- And people will often */use XDP-generic without noticing/*,
+- And people will often */use generic XDP without noticing/*,
   - and complain about performance... this is a support issue.
 
 Real /users/ requesting this:
-- /Suricata config/ want to query for XDP-support, else fallback to BPF-TC
-- /VM-migration/ want to query for XDP-support, else need to abort migration
+- /Suricata config/ want to query for XDP support, else fallback to BPF-TC
+- /VM migration/ want to query for XDP support, else need to abort migration
 
-Original argument: Drivers *MUST support all XDP-features*
-  - Thus, there is not reason to expose feature bits
+Original argument: Drivers *MUST support all XDP features*
+  - Thus, there is no reason to expose feature bits
   - This was *never true*, and e.g. very few drivers support redirect
 
 ** Slide: What is the real issue?!?                                 :export:
@@ -328,19 +329,19 @@ Simply exposing feature XDP to userspace, doesn't solve the real issue
 - Real issue: *too easy to misconfigure*
 - How to get users to check features before attach? (unlikely to happen)
 
-Real issue: Kernel *allows* users to attach XDP bpf_prog
-- that use *features that driver doesn't implement*
-- cause */silent drops/* (debug via tracepoints)
+Real issue: Kernel *allows* users to attach XDP program
+- that uses *features the driver doesn't implement*
+- causes */silent drops/* (only way to debug is tracepoints)
 
 Solution: /Need something that can reject earlier/
-- at /BPF-load/ *or* /XDP-attach/ *time*
-- BPF verifier rejects at BPF-load time (don't see attach time)
-  * (if using a feature that isn't available in BPF-core)
+- at /BPF load/ *or* /XDP attach/ *time*
+- BPF verifier rejects at BPF load time (doesn't see attach operation)
+  * (if using a feature that isn't available in BPF core)
 
 ** Slide: Tech road-block: BPF tail-calls vs attach-time            :export:
 
-Solution#1: Do /feature match/check at XDP driver/ *attach-time*
-- Reject attach, if prog use unsupported features
+Solution#1: Do /feature match/check at XDP driver/ *attach time*
+- Reject attach, if prog uses unsupported features
 - */Not possible due to BPF tail-call maps/*
 
 Essentially tail-call maps adds attach "hook" outside driver control
@@ -350,34 +351,34 @@ Essentially tail-call maps adds attach "hook" outside driver control
    - with new program using unsupported feature
 How can driver reject this 2nd level map insert?!?
 
-** Slide: Solution#2: BPF-load time with ifindex (1/2)              :export:
+** Slide: Solution#2: BPF load time with ifindex (1/2)              :export:
 
-Solution#2: Do /feature match/check at/ *BPF-load time*
+Solution#2: Do /feature match/check at/ *BPF load time*
 - /Supply ifindex/ at *BPF load time* (like HW-offload already does!)
 
-*/Issue-2A/*: /ifindex bound XDP-prog/ use */tail-call map/*
+*/Issue-2A/*: what if /ifindex bound XDP-prog/ uses */tail-call map/*
 - How to check features of programs inserted into tail-call map?
 - Solution-2A: *Bind tail-call map to ifindex*
-  - And on tail-call map insert, BPF-prog must be ifindex bound too
+  - And on tail-call map insert, BPF prog must be ifindex bound too
   - Require: bound prog, must only use bound tail-map (same ifindex)
 - Limitations: cannot share tail-call maps (any real users?)
 
 - /Opt-in interface/ via supplying ifindex
-  - Have to support not supply ifindex, due to backwards compatibility
+  - Have to support not supplying ifindex, due to backwards compatibility
 
 ** Slide: Solution#2: BPF-load time with ifindex (2/2)              :export:
 
-*/Issue-2B/*: *Generic-XDP*
-- At BPF load time, don't know if used for /native or generic/-XDP
+*/Issue-2B/*: *Generic XDP*
+- At BPF load time, don't know if used for /native or generic/ XDP
 
-Generic-XDP should support same feature set for all net_devices
+Generic XDP should support same feature set for all net_devices
 - Still, some XDP features are not supported
   - e.g. cpumap redirect (silent drop)
 
 Possible solutions
 - Option(1) supply more info than ifindex?
   - Annoying for API perspective
-- Option(2) let ifindex imply native-XDP?
+- Option(2) let ifindex imply native XDP?
   - Force generic-XDP to implement all XDP features (with some fallback)
 
 
@@ -396,22 +397,22 @@ Next discussion:
 Either need to /supply features/ (more input than =ifindex=)
 - *Or* verifier needs to be able to /detect features/
 
-Verifier *detection strategy*, to deduce XDP features in-use
+Verifier *detection strategy*, to deduce XDP features in use
 - If XDP return code comes from register/map
-  - then assume all XDP-return codes in use
-- Except: can remove XDP_REDIRECT if redirect-helper isn't used
+  - then assume all XDP return codes in use
+- Except: can remove XDP_REDIRECT if redirect helper isn't used
   - And assume remaining codes are in use
 
 ** Slide: What kind of XDP features to express?                     :export:
 
-Obvious feature: XDP-return codes in use
+Obvious feature: XDP return codes in use
 
-Some /BPF-helpers/ can *depend on driver feature*
+Some /BPF helpers/ can *depend on driver feature*
 - /=bpf_xdp_adjust_meta()=/ depend on driver feature
-  * Today fails runtime (we can do better!)
+  * Today fails at runtime (we can do better!)
 - /=bpf_xdp_adjust_tail()=/ relevant to know for multi-buffer support
 
-Verifier can easily detect BPF-helpers in use
+Verifier can easily detect BPF helpers in use
 
 ** Slide: How to expose XDP features to userspace?                  :export:
 
@@ -728,6 +729,6 @@ Accent Palette:
 # Local Variables:
 # org-reveal-title-slide: "<h1 class=\"title\">%t</h1><h2
 # class=\"author\">Jiri Benc<br/>Jesper Dangaard Brouer<br/>Toke Høiland-Jørgensen</h2>
-# <h3>Red Hat inc<br/>Linux Plumbers Conf<br/>Sep 2019</h3>"
+# <h3>Linux Plumbers Conference<br/>Lisbon, Sep 2019</h3>"
 # org-export-filter-headline-functions: ((lambda (contents backend info) (replace-regexp-in-string "Slide: " "" contents)))
 # End:
