--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -187,7 +187,22 @@ Only sections with tag ":export:" will end-up in the presentation. The prefix
 "Slide:" is only syntax-sugar for the reader (and it removed before export by
 emacs).
 
-* Slide: Outline: On distro view                                     :export:
+* Slide: Outline                                                     :export:
+
+In this talk we will try to give a /distro view on XDP and eBPF/.
+
+- Experiences with enabling eBPF and XDP in Red Hat Enterprise Linux
+- Current status of the support
+- Remaining pain points
+  - Multiple XDP programs per interface
+  - XDP feature detection
+  - eBPF audit support
+  - Safety of the verifier
+  - Controlling eBPF capabilities
+  - Tooling, build environments and support
+  - Managing expectations - things XDP cannot (currently) do
+
+* Slide: The high-level distro view                                  :export:
 
 eBPF *challenges* our normal /perspective/: kernel vs user-space
 
@@ -202,7 +217,7 @@ BPFtool does BPF /feature probing/, but *this doesn't work with XDP*
   - Kernel allows users to *attach invalid XDP progs*, giving */silent drops/*
 - Deep dive later: Proposing a solution for XDP features
 
-** Slide: Outline: XDP specific issues
+** Slide: Specific XDP issues
 
 *Hard to troubleshoot* XDP without tcpdump-like facility
 - Today, Sysadm/FOSS-user needs to modify BPF prog to debug (unreasonable)
@@ -248,183 +263,6 @@ With XDP focus, we have created a GitHub [[https://github.com/xdp-project/][XDP-
 - Subproject [[https://github.com/xdp-project/xdp-tutorial][XDP-tutorial]] with /easy build and devel environment/
   - Build and test directly on your laptop via veth and network-namespaces
   - Recently added tracing examples too
-
-* Topic: BPF security, safety and audit logging                      :export:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-** Slide: Current BPF "privileged" level unusable                  :export:
-
-Current BPF only one "privileged" level, root (=CAP_SYS_ADMIN=)
-
-RHEL: limit BPF to root only system-wide
-- Our only option: Fully unpriv user = too high risk
-- Actually /not what we really want/ - bad for overall system safety
-- E.g. daemons *unnecessary run as root after loading BPF-prog*
-  - expose (daemon) can crash/compromise entire system
-  - common UNIX practise to drop priv, cannot as still need to read maps
-
-Need more flexible BPF "capabilities" levels
-- [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][Use-case]]: Android [[https://source.android.com/devices/tech/datausage/ebpf-traffic-monitor][ebpf-traffic-monitor]] reads MAP stats (in unpriv process)
-  - Currently forced to keep unprivileged BPF enabled
-- Levels still motivate security guys to find holes
-
-*** Notes to Slide: Current BPF "privileged" level unusable      :noexport:
-
-We are very interested in Andy Lutomirski upstream proposal and appreciate his
-effort. See his proposal: https://t.co/WIhsdN2PoJ
-
-We also find Daniel Borkmanns [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][idea for several CAP_BPF type sub-policies]]
-interesting.
-
-Alexei now also have a [[ https://lore.kernel.org/netdev/20190827205213.456318-1-ast@kernel.org/T/#u][code proposal]]
-- Introducing CAP_BPF and combining with CAP_NET_ADMIN
-- Discussions on also adding CAP_TRACING
-
-** Slide: BPF audit logging                                         :export:
-
-*/INCOMPLETE SLIDE - PLEASE FIX/*
-
-Simply logging BPF prog + attach, seemed natural
-- Want simple audit trail of BPF prog load/unload + attach
-- This was blocked upstream...
-- TODO: Explain why?!
-
-
-* Slide: Topic: Missing XDP feature detection                       :export:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-#+BEGIN_NOTES
-This is a compressed version of Jesper's slides
-#+END_NOTES
-
-XDP features  *dependent on driver support*, which breaks BPF feature "system"
-- BPF-core is always compiled-in
-- BPF verifier will /reject/ BPF prog
-  - if using a *feature that isn't available in BPF core*
-
-XDP challenges this concept
-
-** Slide: The XDP available features issue                          :export:
-
-Today: Users cannot know if a device driver supports XDP or not
-- This is the most often asked question
-- And people will often */use generic XDP without noticing/*,
-  - and complain about performance... this is a support issue.
-
-Real /users/ requesting this:
-- /Suricata config/ want to query for XDP support, else fallback to BPF-TC
-- /VM migration/ want to query for XDP support, else need to abort migration
-
-Original argument: Drivers *MUST support all XDP features*
-  - Thus, there is no reason to expose feature bits
-  - This was *never true*, and e.g. very few drivers support redirect
-
-** Slide: What is the real issue?!?                                 :export:
-
-Simply exposing feature XDP to userspace, doesn't solve the real issue
-- Real issue: *too easy to misconfigure*
-- How to get users to check features before attach? (unlikely to happen)
-
-Real issue: Kernel *allows* users to attach XDP program
-- that uses *features the driver doesn't implement*
-- causes */silent drops/* (only way to debug is tracepoints)
-
-Solution: /Need something that can reject earlier/
-- at /BPF load/ *or* /XDP attach/ *time*
-- BPF verifier rejects at BPF load time (doesn't see attach operation)
-  * (if using a feature that isn't available in BPF core)
-
-** Slide: Tech road-block: BPF tail-calls vs attach-time            :export:
-
-Solution#1: Do /feature match/check at XDP driver/ *attach time*
-- Reject attach, if prog uses unsupported features
-- */Not possible due to BPF tail-call maps/*
-
-Essentially tail-call maps adds attach "hook" outside driver control
-1. Driver XDP prog tail-calls into prog map
-2. Tail-prog calls into another (2nd level) prog map
-3. Later 2nd level map is updated
-   - with new program using unsupported feature
-How can driver reject this 2nd level map insert?!?
-
-** Slide: Solution#2: BPF load time with ifindex (1/2)              :export:
-
-Solution#2: Do /feature match/check at/ *BPF load time*
-- /Supply ifindex/ at *BPF load time* (like HW-offload already does!)
-
-*/Issue-2A/*: what if /ifindex bound XDP-prog/ uses */tail-call map/*
-- How to check features of programs inserted into tail-call map?
-- Solution-2A: *Bind tail-call map to ifindex*
-  - And on tail-call map insert, BPF prog must be ifindex bound too
-  - Require: bound prog, must only use bound tail-map (same ifindex)
-- Limitations: cannot share tail-call maps (any real users?)
-
-- /Opt-in interface/ via supplying ifindex
-  - Have to support not supplying ifindex, due to backwards compatibility
-
-** Slide: Solution#2: BPF-load time with ifindex (2/2)              :export:
-
-*/Issue-2B/*: *Generic XDP*
-- At BPF load time, don't know if used for /native or generic/ XDP
-
-Generic XDP should support same feature set for all net_devices
-- Still, some XDP features are not supported
-  - e.g. cpumap redirect (silent drop)
-
-Possible solutions
-- Option(1) supply more info than ifindex?
-  - Annoying for API perspective
-- Option(2) let ifindex imply native XDP?
-  - Force generic-XDP to implement all XDP features (with some fallback)
-
-
-* Slide: Next discussion: Expressing XDP features                    :export:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-Next discussion:
-- What XDP features need to be expressed?
-- Can verifier detect these features?
-  - if not, can users be trusted to supply features?
-
-** Slide: Can verifier detect XDP features?                           :export:
-
-Either need to /supply features/ (more input than =ifindex=)
-- *Or* verifier needs to be able to /detect features/
-
-Verifier *detection strategy*, to deduce XDP features in use
-- If XDP return code comes from register/map
-  - then assume all XDP return codes in use
-- Except: can remove XDP_REDIRECT if redirect helper isn't used
-  - And assume remaining codes are in use
-
-** Slide: What kind of XDP features to express?                     :export:
-
-Obvious feature: XDP return codes in use
-
-Some /BPF helpers/ can *depend on driver feature*
-- /=bpf_xdp_adjust_meta()=/ depend on driver feature
-  * Today fails at runtime (we can do better!)
-- /=bpf_xdp_adjust_tail()=/ relevant to know for multi-buffer support
-
-Verifier can easily detect BPF helpers in use
-
-** Slide: How to expose XDP features to userspace?                  :export:
-
-Highly prefer verifier detect features
-- /Pros/: Avoids defining UAPI, thus easier to extend
-- */Cons/*: Userspace cannot easily get XDP feature bits from NIC
-
-Driver needs to express feature bits internally.
-Two options:
-- (1) Expose driver feature bits (ethtool? kind of UAPI)
-- (2) Do feature probing like bpftool
-
 
 * Slide: Multiple XDP programs on a single interface                 :export:
 :PROPERTIES:
@@ -664,6 +502,183 @@ $ ip link set dev eth0 xdp object prog.o chain replace 3
   --> map_update(map, {2, PASS}, id);
   --> xdp_attach(eth0, 1, map, FORCE); # atomic replace
 #+end_src
+
+
+* Slide: Topic: Missing XDP feature detection                       :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+#+BEGIN_NOTES
+This is a compressed version of Jesper's slides
+#+END_NOTES
+
+XDP features  *dependent on driver support*, which breaks BPF feature "system"
+- BPF-core is always compiled-in
+- BPF verifier will /reject/ BPF prog
+  - if using a *feature that isn't available in BPF core*
+
+XDP challenges this concept
+
+** Slide: The XDP available features issue                          :export:
+
+Today: Users cannot know if a device driver supports XDP or not
+- This is the most often asked question
+- And people will often */use generic XDP without noticing/*,
+  - and complain about performance... this is a support issue.
+
+Real /users/ requesting this:
+- /Suricata config/ want to query for XDP support, else fallback to BPF-TC
+- /VM migration/ want to query for XDP support, else need to abort migration
+
+Original argument: Drivers *MUST support all XDP features*
+  - Thus, there is no reason to expose feature bits
+  - This was *never true*, and e.g. very few drivers support redirect
+
+** Slide: What is the real issue?!?                                 :export:
+
+Simply exposing feature XDP to userspace, doesn't solve the real issue
+- Real issue: *too easy to misconfigure*
+- How to get users to check features before attach? (unlikely to happen)
+
+Real issue: Kernel *allows* users to attach XDP program
+- that uses *features the driver doesn't implement*
+- causes */silent drops/* (only way to debug is tracepoints)
+
+Solution: /Need something that can reject earlier/
+- at /BPF load/ *or* /XDP attach/ *time*
+- BPF verifier rejects at BPF load time (doesn't see attach operation)
+  * (if using a feature that isn't available in BPF core)
+
+** Slide: Tech road-block: BPF tail-calls vs attach-time            :export:
+
+Solution#1: Do /feature match/check at XDP driver/ *attach time*
+- Reject attach, if prog uses unsupported features
+- */Not possible due to BPF tail-call maps/*
+
+Essentially tail-call maps adds attach "hook" outside driver control
+1. Driver XDP prog tail-calls into prog map
+2. Tail-prog calls into another (2nd level) prog map
+3. Later 2nd level map is updated
+   - with new program using unsupported feature
+How can driver reject this 2nd level map insert?!?
+
+** Slide: Solution#2: BPF load time with ifindex (1/2)              :export:
+
+Solution#2: Do /feature match/check at/ *BPF load time*
+- /Supply ifindex/ at *BPF load time* (like HW-offload already does!)
+
+*/Issue-2A/*: what if /ifindex bound XDP-prog/ uses */tail-call map/*
+- How to check features of programs inserted into tail-call map?
+- Solution-2A: *Bind tail-call map to ifindex*
+  - And on tail-call map insert, BPF prog must be ifindex bound too
+  - Require: bound prog, must only use bound tail-map (same ifindex)
+- Limitations: cannot share tail-call maps (any real users?)
+
+- /Opt-in interface/ via supplying ifindex
+  - Have to support not supplying ifindex, due to backwards compatibility
+
+** Slide: Solution#2: BPF-load time with ifindex (2/2)              :export:
+
+*/Issue-2B/*: *Generic XDP*
+- At BPF load time, don't know if used for /native or generic/ XDP
+
+Generic XDP should support same feature set for all net_devices
+- Still, some XDP features are not supported
+  - e.g. cpumap redirect (silent drop)
+
+Possible solutions
+- Option(1) supply more info than ifindex?
+  - Annoying for API perspective
+- Option(2) let ifindex imply native XDP?
+  - Force generic-XDP to implement all XDP features (with some fallback)
+
+
+* Slide: Next discussion: Expressing XDP features                    :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+Next discussion:
+- What XDP features need to be expressed?
+- Can verifier detect these features?
+  - if not, can users be trusted to supply features?
+
+** Slide: Can verifier detect XDP features?                           :export:
+
+Either need to /supply features/ (more input than =ifindex=)
+- *Or* verifier needs to be able to /detect features/
+
+Verifier *detection strategy*, to deduce XDP features in use
+- If XDP return code comes from register/map
+  - then assume all XDP return codes in use
+- Except: can remove XDP_REDIRECT if redirect helper isn't used
+  - And assume remaining codes are in use
+
+** Slide: What kind of XDP features to express?                     :export:
+
+Obvious feature: XDP return codes in use
+
+Some /BPF helpers/ can *depend on driver feature*
+- /=bpf_xdp_adjust_meta()=/ depend on driver feature
+  * Today fails at runtime (we can do better!)
+- /=bpf_xdp_adjust_tail()=/ relevant to know for multi-buffer support
+
+Verifier can easily detect BPF helpers in use
+
+** Slide: How to expose XDP features to userspace?                  :export:
+
+Highly prefer verifier detect features
+- /Pros/: Avoids defining UAPI, thus easier to extend
+- */Cons/*: Userspace cannot easily get XDP feature bits from NIC
+
+Driver needs to express feature bits internally.
+Two options:
+- (1) Expose driver feature bits (ethtool? kind of UAPI)
+- (2) Do feature probing like bpftool
+
+
+* Topic: BPF security, safety and audit logging                      :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+** Slide: Current BPF "privileged" level unusable                  :export:
+
+Current BPF only one "privileged" level, root (=CAP_SYS_ADMIN=)
+
+RHEL: limit BPF to root only system-wide
+- Our only option: Fully unpriv user = too high risk
+- Actually /not what we really want/ - bad for overall system safety
+- E.g. daemons *unnecessary run as root after loading BPF-prog*
+  - expose (daemon) can crash/compromise entire system
+  - common UNIX practise to drop priv, cannot as still need to read maps
+
+Need more flexible BPF "capabilities" levels
+- [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][Use-case]]: Android [[https://source.android.com/devices/tech/datausage/ebpf-traffic-monitor][ebpf-traffic-monitor]] reads MAP stats (in unpriv process)
+  - Currently forced to keep unprivileged BPF enabled
+- Levels still motivate security guys to find holes
+
+*** Notes to Slide: Current BPF "privileged" level unusable      :noexport:
+
+We are very interested in Andy Lutomirski upstream proposal and appreciate his
+effort. See his proposal: https://t.co/WIhsdN2PoJ
+
+We also find Daniel Borkmanns [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][idea for several CAP_BPF type sub-policies]]
+interesting.
+
+Alexei now also have a [[ https://lore.kernel.org/netdev/20190827205213.456318-1-ast@kernel.org/T/#u][code proposal]]
+- Introducing CAP_BPF and combining with CAP_NET_ADMIN
+- Discussions on also adding CAP_TRACING
+
+** Slide: BPF audit logging                                         :export:
+
+*/INCOMPLETE SLIDE - PLEASE FIX/*
+
+Simply logging BPF prog + attach, seemed natural
+- Want simple audit trail of BPF prog load/unload + attach
+- This was blocked upstream...
+- TODO: Explain why?!
 
 
 * Notes
